cedar-lean/UnitTest/parser_tests/negative/invalid_entity_ref.cedar
permit(principal, action, resource) when { User::"alice":: };
